# BattleShip

source/client/: CMakeLists.txt  background.cpp  config.ini  coordinate_manager.cpp  game.cpp  game.h  img_object.cpp  img_object.h  item.cpp  item.h  main.cpp
source/client/utils/: Vector2D.h  point.h
